profilelist1exp/unpackaged/objects/Influence_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed Email</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>No Contact Record</fullName>
                </value>
                <value>
                    <fullName>No Influence Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influence_Snapshot__c</fullName>
        <label>Influence Snapshot</label>
        <referenceTo>Influence_Parent__c</referenceTo>
        <relationshipLabel>Influence Trackers</relationshipLabel>
        <relationshipName>Influence_Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influence</label>
        <referenceTo>Influence__c</referenceTo>
        <relationshipLabel>Influence Trackers</relationshipLabel>
        <relationshipName>Influence_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Influence_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Influence Tracker</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>Influence Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influence Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>